# pl-wandb-demo

./: .gitignore  README.md  pyproject.toml
examples/: 0-train.py  1-resume.py  config.yml  train_mnist.py  wandb_demo.py
src/pl_wandb_demo/: utils.py
src/pl_wandb_demo/data_modules/: __init__.py  mnist_data_module.py
src/pl_wandb_demo/models/: __init__.py  mnist_classifier.py
